# file2gpio

./: .gitignore  CMakeLists.txt  README.md  bbb-toolchain.cmake
docker/: Dockerfile
include/: app.hpp
scratch/: bbb-gpio-test.cpp  config.json  gpio-writer-test.cpp  gpio_pin-test.cpp  json-test  json-test.cpp  test
scratch/queue-pool-test/: BufferPool.hpp  ThreadSafeQueue.hpp  a.out  test.cpp
scripts/: Untitled.ipynb  generate_gpio_cmds.py  gpio_cmds  print_bytes.py
scripts/.ipynb_checkpoints/: generate_gpio_cmds-checkpoint.py
src/: config.json  main.cpp
src/BeagleBoneBlack_GPIO/: BBBGpioPin.cpp  BBBGpioPin.h  bbb_gpio.h  bbb_gpio_pin.cpp
src/FileReader/: FileReader.cpp  FileReader.hpp
src/GpioWriter/: GpioWriter.cpp  GpioWriter.hpp
src/Utils/: BufferPool.hpp  GpioFrame.hpp  json.hpp
